# ARKA

./: .env.example  .gitignore  .gitmodules  .mcp.json  FUTURE_WORK.md  HARDWARE_DISTRIBUTION.md  LGPL3_COMPLIANCE.md  LICENSE  NOTICE.txt  README.md  SAFETY_RAILS_IMPLEMENTATION.md  arka-cli  config.py  docker-compose.pi.yml  docker-compose.yml  install.sh  pytest.ini  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
backtest/: optimizer.py  strategy_comparison.py
config/: prometheus.yml
dashboard/: Dockerfile  capacitor.config.json  index.html  nginx.conf  package.json  vite.config.js
hypervisor/: Dockerfile  audit.py  auth.py  circuit_breaker.py  di_container.py  errors.py  main.py
scripts/: deploy_pi.sh
tests/: test_concurrency.py  test_integration_dryrun.py  test_mara.py  test_phase5_coverage.py  test_phase6_quality.py  test_safety_rails.py
workers/polymarket/src/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
workers/polymarket/src/src/: __init__.py  config.py  main.py
workers/polymarket/src/src/execution/: __init__.py  order_executor.py
workers/polymarket/src/src/inventory/: __init__.py  inventory_manager.py
workers/polymarket/src/src/market_maker/: __init__.py  quote_engine.py
workers/polymarket/src/src/polymarket/: __init__.py  order_signer.py  rest_client.py  websocket_client.py
workers/polymarket/src/src/risk/: __init__.py  risk_manager.py
workers/polymarket/src/src/services/: __init__.py  auto_redeem.py  metrics.py
workers/polymarket/src/src/utils/: __init__.py
(+59 files in other folders)
